--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
         "mocha": "^9.2.2",
         "typescript": "^4.6.4",
         "@vscode/test-electron": "^2.1.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MartinZielke/better-php-error-logger"
     }
 }
