--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customisation options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.0.71",
+    "version": "0.0.72",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -12,7 +12,10 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.errorLog"
+        "onCommand:extension.errorLog",
+        "onCommand:extension.callStack",
+        "onCommand:extension.varDumpVariable",
+        "onCommand:extension.useEchoInstead"
     ],
     "main": "./extension.js",
     "contributes": {
@@ -20,28 +23,41 @@
             {
                 "command": "extension.errorLog",
                 "title": "Error log"
+            },
+            {
+                "command": "extension.callStack",
+                "title": "Call stack"
+            },
+            {
+                "command": "extension.varDumpVariable",
+                "title": "Var dump variable"
+            },
+            {
+                "command": "extension.useEchoInstead",
+                "title": "Use echo instead"
             }
         ],
         "keybindings": [
             {
                 "command": "extension.errorLog",
                 "key": "ctrl+alt+d",
-                "mac": "ctrl+alt+d"
+                "mac": "ctrl+alt+d",
+                "args": ""
             },
             {
-                "command": "extension.errorLog",
+                "command": "extension.callStack",
                 "key": "ctrl+alt+shift+d",
                 "mac": "ctrl+alt+shift+d",
                 "args": "printWithCallStack"
             },
             {
-                "command": "extension.errorLog",
+                "command": "extension.varDumpVariable",
                 "key": "ctrl+alt+shift+e",
                 "mac": "ctrl+alt+shift+e",
                 "args": "varDumpVariable"
             },
             {
-                "command": "extension.errorLog",
+                "command": "extension.useEchoInstead",
                 "key": "ctrl+alt+shift+f",
                 "mac": "ctrl+alt+shift+f",
                 "args": "useEchoInstead"
