--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customisation options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.0.72",
+    "version": "0.0.73",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -11,53 +11,72 @@
     "categories": [
         "Other"
     ],
+    "keywords": [
+        "php",
+        "error",
+        "logger",
+        "log",
+        "customisation",
+        "error logger",
+        "errorlog",
+        "error_log",
+        "better",
+        "var_dump",
+        "var dump",
+        "call stack",
+        "echo error",
+        "log error",
+        "log error message",
+        "line number",
+        "file name"
+    ],
     "activationEvents": [
-        "onCommand:extension.errorLog",
-        "onCommand:extension.callStack",
-        "onCommand:extension.varDumpVariable",
-        "onCommand:extension.useEchoInstead"
+        "onCommand:extension.betterPhpErrorLogger",
+        "onCommand:extension.betterPhpErrorLogger.callStack",
+        "onCommand:extension.betterPhpErrorLogger.varDumpVariable",
+        "onCommand:extension.betterPhpErrorLogger.useEchoInstead"
     ],
     "main": "./extension.js",
     "contributes": {
         "commands": [
             {
-                "command": "extension.errorLog",
+                "command": "extension.betterPhpErrorLogger",
                 "title": "Error log"
             },
             {
-                "command": "extension.callStack",
+                "command": "extension.betterPhpErrorLogger.callStack",
                 "title": "Call stack"
             },
             {
-                "command": "extension.varDumpVariable",
+                "command": "extension.betterPhpErrorLogger.varDumpVariable",
                 "title": "Var dump variable"
             },
             {
-                "command": "extension.useEchoInstead",
+                "command": "extension.betterPhpErrorLogger.useEchoInstead",
                 "title": "Use echo instead"
             }
         ],
         "keybindings": [
             {
-                "command": "extension.errorLog",
+                "command": "extension.betterPhpErrorLogger",
                 "key": "ctrl+alt+d",
                 "mac": "ctrl+alt+d",
                 "args": ""
             },
             {
-                "command": "extension.callStack",
+                "command": "extension.betterPhpErrorLogger.callStack",
                 "key": "ctrl+alt+shift+d",
                 "mac": "ctrl+alt+shift+d",
                 "args": "printWithCallStack"
             },
             {
-                "command": "extension.varDumpVariable",
+                "command": "extension.betterPhpErrorLogger.varDumpVariable",
                 "key": "ctrl+alt+shift+e",
                 "mac": "ctrl+alt+shift+e",
                 "args": "varDumpVariable"
             },
             {
-                "command": "extension.useEchoInstead",
+                "command": "extension.betterPhpErrorLogger.useEchoInstead",
                 "key": "ctrl+alt+shift+f",
                 "mac": "ctrl+alt+shift+f",
                 "args": "useEchoInstead"
