Changed to do oppsite shortcuts when settings true

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "better-php-error-logger",
     "displayName": "Better PHP Error Logger",
-    "description": "A PHP error logger with customisation options",
+    "description": "A PHP error logger with customization options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.0.8",
+    "version": "0.0.81",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -17,6 +17,7 @@
         "logger",
         "log",
         "customisation",
+        "customization",
         "error logger",
         "errorlog",
         "error_log",
