--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customization options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.0.84",
+    "version": "0.0.88",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -39,7 +39,7 @@
         "onCommand:extension.betterPhpErrorLogger.deleteErrorLogs",
         "onCommand:extension.betterPhpErrorLogger.printCurrentOutputBuffer"
     ],
-    "main": "./extension.js",
+    "main": "./built/extension.js",
     "contributes": {
         "commands": [
             {
@@ -201,7 +201,7 @@
         "eslint": "^8.14.0",
         "glob": "^8.0.1",
         "mocha": "^9.2.2",
-        "typescript": "^4.6.4",
+        "typescript": "^4.7.3",
         "@vscode/test-electron": "^2.1.3"
     },
     "repository": {
