--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "esModuleInterop": true,
         "lib": [
             "ES2021"
-        ]
+        ],
+        "sourceMap": true
     },
     "include": [
         "./**/*"
